Change result type to accept multiple batches (#20667)
* Change result type to accept multiple batches

Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>

* move fieldValues to ArrayList type

* Add fix capacity for FieldValues

* Add abstraction for DF results in vectorised SPI

Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>

---------

Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>