@@ -42,6 +42,7 @@ import org.opensearch.common.Numbers;
 import org.opensearch.common.lease.Releasable;
 import org.opensearch.common.lease.Releasables;
 import org.opensearch.common.util.LongArray;
+import org.opensearch.vectorized.execution.search.spi.QueryResult;
 import org.opensearch.index.codec.composite.CompositeIndexFieldInfo;
 import org.opensearch.index.compositeindex.datacube.startree.index.StarTreeValues;
 import org.opensearch.index.compositeindex.datacube.startree.utils.iterator.SortedNumericStarTreeValuesIterator;
@@ -84,6 +85,7 @@ import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static org.opensearch.search.aggregations.InternalOrder.isKeyOrder;
@@ -523,15 +525,16 @@ public class NumericTermsAggregator extends TermsAggregator implements StarTreeP
         }
 
         @Override
-        public List<InternalAggregation> convert(Map<String, Object[]> shardResult, SearchContext searchContext) {
-                int rowCount = shardResult.isEmpty() ? 0 : shardResult.get(name).length ;
+        public List<InternalAggregation> convert(QueryResult dfResult, SearchContext searchContext) {
+                Map<String, List<Object>> shardResult = dfResult.getColumns();
+                int rowCount = shardResult.isEmpty() ? 0 : shardResult.get(name).size() ;
                 List<LongTerms.Bucket> buckets = new ArrayList<>(rowCount);
                 for (int i = 0; i < rowCount; i++) {
                     final int j = i;
                     buckets.add(new LongTerms.Bucket(
-                        ((Number) searchContext.convertToComparable(shardResult.get(name)[i])).longValue(),
+                        ((Number) searchContext.convertToComparable(shardResult.get(name).get(i))).longValue(),
                         1,
-                        InternalAggregations.from(Arrays.stream(subAggregators).map(subAgg -> ((ShardResultConvertor)subAgg).convertRow(shardResult, j, searchContext)).toList()),
+                        InternalAggregations.from(Arrays.stream(subAggregators).map(subAgg -> ((ShardResultConvertor)subAgg).convertRow(shardResult, j, searchContext)).collect(Collectors.toList())),
                         true,
                         0,
                         format
@@ -640,18 +643,19 @@ public class NumericTermsAggregator extends TermsAggregator implements StarTreeP
         }
 
         @Override
-        public List<InternalAggregation> convert(Map<String, Object[]> shardResult, SearchContext searchContext) {
+        public List<InternalAggregation> convert(QueryResult dfResult, SearchContext searchContext) {
+            Map<String, List<Object>> shardResult = dfResult.getColumns();
             if(shardResult.isEmpty()) {
                 return Collections.singletonList(buildEmptyAggregation());
             }
-            int rowCount = shardResult.isEmpty() ? 0 : shardResult.get(name).length ;
+            int rowCount = shardResult.isEmpty() ? 0 : shardResult.get(name).size() ;
             List<DoubleTerms.Bucket> buckets = new ArrayList<>(rowCount);
             for (int i = 0; i < rowCount; i++) {
                 final int j = i;
                 buckets.add(new DoubleTerms.Bucket(
-                    ((Number) searchContext.convertToComparable(shardResult.get(name)[i])).doubleValue(),
+                    ((Number) searchContext.convertToComparable(shardResult.get(name).get(i))).doubleValue(),
                     1,
-                    InternalAggregations.from(Arrays.stream(subAggregators).map(subAgg -> ((ShardResultConvertor)subAgg).convertRow(shardResult, j, searchContext)).toList()),
+                    InternalAggregations.from(Arrays.stream(subAggregators).map(subAgg -> ((ShardResultConvertor)subAgg).convertRow(shardResult, j, searchContext)).collect(Collectors.toList())),
                     true,
                     0,
                     format
@@ -877,12 +881,12 @@ public class NumericTermsAggregator extends TermsAggregator implements StarTreeP
     }
 
     @Override
-    public List<InternalAggregation> convert(Map<String, Object[]> shardResult, SearchContext searchContext) {
-        if(shardResult.isEmpty()) {
+    public List<InternalAggregation> convert(QueryResult dfResult, SearchContext searchContext) {
+        if(dfResult.getColumns().isEmpty()) {
             return Collections.singletonList(buildEmptyAggregation());
         }
         if (resultStrategy instanceof ShardResultConvertor) {
-            return ((ShardResultConvertor) resultStrategy).convert(shardResult, searchContext);
+            return ((ShardResultConvertor) resultStrategy).convert(dfResult, searchContext);
         } else {
             throw new UnsupportedOperationException("Result strategy not supported for conversion " + resultStrategy.getClass().getName());
         }
